home section z-index fix

--- a/style.css
+++ b/style.css
@@ -166,7 +166,7 @@ header>div {
     display: flex;
     flex-direction: column;
     align-items: center;
-    z-index: 2;
+    z-index: 1;
     /* gap: 20px; */
 }
 
@@ -176,13 +176,13 @@ header>div {
     width: 75%;
     height: auto;
     max-width: 1400px;
-    z-index: 2;
+    z-index: 1;
 }
 
 .logoMainVetical {
     display: none;
     padding-top: 90px;
-    z-index: 2;
+    z-index: 1;
 }
 
 .slogan,
